apple theme now works with dots (on/off)    added themeroller support - you can pass the classes in every data type (icons too), the active, hover & highlight classes are automatic    function to get a tree reference by ID    ondelete, oncreate, onmove, oncopy, onrename callbacks now receive additional rollback parameter    added getXML function to get the tree as XML (same as getJSON)    fixed default theme being included multiple times when more than 1 tree is used    fixed rename bug when html entities are used    added ability to pass an xml string as data source    added position argument in create function    option to which button initiates drag'n'drop    added 5px threshold for dragging    Chrome clear float    Fixed scrollbars (issue remains in ff - multiple root elements are not connected with dots)    small bug fixes in classic theme & apple theme
git-svn-id: http://jstree.googlecode.com/svn/trunk@83 7ee4f3fb-cb41-0410-822c-dd8830bd4fbc

--- a/source/themes/apple/style.css
+++ b/source/themes/apple/style.css
@@ -10,11 +10,7 @@
 	font-size:14px;
 }
 */
-.tree .tree-apple,
-.tree .tree-apple ul,
-.tree .tree-apple li.leaf {
-	background-image:none;
-}
+
 .tree .tree-apple {
 	background:url("bg.jpg") left top repeat;
 }
@@ -26,7 +22,8 @@
 	background-image:url("plus.gif");
 }
 
-.tree .tree-apple li a {
+.tree .tree-apple li a,
+.tree .tree-apple li span {
 	background-image:url("folder.png");
 }
 
@@ -50,6 +47,7 @@
 	color:white;
 }
 .tree .tree-apple li a.clicked,
+.tree .tree-apple li a.clicked:hover,
 .tree .tree-apple li span.clicked {
 	background-color:#2E72DF;
 	border-color:#2E72DF;
