--- a/source/themes/default/style.css
+++ b/source/themes/default/style.css
@@ -1,13 +1,46 @@
 /* DOTS */
-.tree .tree-default, 
+.tree .tree-default,
 .tree .tree-default ul {
+	background-position:6px 1px;
+	background-repeat:repeat-y;
 	background-image:url("dot.gif");
 }
 .tree .tree-default li {
+	background-position:7px 8px;
+	background-repeat:no-repeat;
 	background-image:url("li.gif");
 }
 .tree .tree-default li.last {
+	background-position:5px top;
+	background-repeat:no-repeat;
 	background-image:url("lastli.gif");
+	float:left;
+}
+.rtl .tree-default,
+.rtl .tree-default ul {
+	background-position:right 1px;
+}
+.rtl .tree-default li {
+	background-position:right 8px;
+}
+.rtl .tree-default li.last {
+	background-image:url("lastli_rtl.gif");
+	background-position:right top;
+}
+.rtl .tree-default #dragged li.open {
+	background-position: right 5px;
+}
+/* NO DOTS */
+.no_dots .tree-default ul {
+	background:transparent;
+}
+.no_dots .tree-default li, .no_dots .tree-default li.last {
+	background-color:transparent;
+	background-image:none;
+}
+.no_dots .tree-default li.leaf {
+	background-image:none;
+	background-color:transparent;
 }
 
 /* OPEN or CLOSED */
@@ -28,7 +61,6 @@
 	margin-right:1px;
 }
 .rtl .tree-default li.last {
-	background-image:url("lastli_rtl.gif");
 	margin-right:0;
 	padding-right:16px;
 }
@@ -49,14 +81,60 @@
 /* DEFAULT ICON */
 .tree .tree-default li a, 
 .tree .tree-default li span {
+	background-color:transparent;
+	background-repeat:no-repeat;
+	background-position:4px 1px;
+	padding:1px 4px 1px 23px;
 	background-image:url("f.png");
 	border-radius:3px;
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 }
+.tree .tree-default li a:hover,
+.tree .tree-default li a.hover {
+	background-color: #e7f4f9;
+	border:1px solid #d8f0fa;
+	padding:0px 3px 0px 22px;
+	background-position:3px 0px; 
+}
+.tree .tree-default li a.clicked,
+.tree .tree-default li a.clicked:hover,
+.tree .tree-default li span.clicked {
+	background-color: #beebff;
+	border:1px solid #99defd;
+	padding:0px 3px 0px 22px;
+	background-position:3px 0px; 
+}
+.tree .tree-default li span.clicked {
+	padding:0px 3px 0px 20px;
+}
 
 .tree .tree-default li a.loading {
 	background-image:url("throbber.gif");
+}
+
+/** RTL SUPPORT */
+.rtl .tree-default li a,
+.rtl .tree-default li span {
+	padding:1px 23px 1px 4px;
+	background-position:right 1px; 
+	margin-right:1px;
+}
+.rtl .tree-default li a:hover, 
+.rtl .tree-default li a.hover {
+	padding:0px 23px 0px 3px;
+	background-position:right 0px; 
+	margin-right:0px;
+}
+.rtl .tree-default li a.clicked,
+.rtl .tree-default li a.clicked:hover,
+.rtl .tree-default li span.clicked {
+	padding:0px 23px 0px 3px;
+	background-position:right 0px; 
+	margin-right:0px;
+}
+.rtl .tree-default li span.clicked {
+	padding:0px 21px 0px 3px;
 }
 
 /* CONTEXT MENU */
@@ -95,7 +173,7 @@
 }
 
 .tree .tree-default .context .separator {
-	background:#FFFFFF;;
+	background:#FFFFFF;
 	border-top:1px solid #E0E0E0;
 	font-size:1px;
 	height:1px;
